Updated CustomerService to read from config server

--- a/CustomerService/src/main/resources/application.properties
+++ b/CustomerService/src/main/resources/application.properties
@@ -1,13 +1,14 @@
 spring.application.name=customerms
 server.port=8101
 
-spring.datasource.url=jdbc:h2:./h2/spring-boot-h2-db;DB_CLOSE_DELAY=-1
-spring.datasource.username=user
-spring.datasource.password=pwd
-spring.datasource.driver-class-name=org.h2.Driver
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
-spring.h2.console.enabled=true
-#Default is /h2-console
-spring.h2.console.path=/h2
-
-spring.jpa.hibernate.ddl-auto=update
+# Below properties are moved to central cloud config hence commented.
+#spring.datasource.url=jdbc:h2:./h2/spring-boot-h2-db;DB_CLOSE_DELAY=-1
+#spring.datasource.username=user
+#spring.datasource.password=pwd
+#spring.datasource.driver-class-name=org.h2.Driver
+#spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+#spring.h2.console.enabled=true
+##Default is /h2-console
+#spring.h2.console.path=/h2
+#
+#spring.jpa.hibernate.ddl-auto=update
