--- a/msConfig/productms.properties
+++ b/msConfig/productms.properties
@@ -1,5 +1,5 @@
 spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/customerdb
+spring.datasource.url=jdbc:mysql://localhost:3306/productdb
 spring.datasource.username=root
 spring.datasource.password=root
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
