--- a/msConfig/application.properties
+++ b/msConfig/application.properties
@@ -1,1 +1,1 @@
-spring.jpa.hibernate.ddl-auto=update
+eureka.client.service-url.defaultZone=http://localhost:8501/eureka,http://localhost:8502/eureka
