Added Discovery Client to user Eureka for service discovery

--- a/CustomerService/src/main/resources/application.properties
+++ b/CustomerService/src/main/resources/application.properties
@@ -1,5 +1,5 @@
-spring.application.name=customerms
-server.port=8101
+#spring.application.name=customerms
+#server.port=8101
 
 # Below properties are moved to central cloud config hence commented.
 #spring.datasource.url=jdbc:h2:./h2/spring-boot-h2-db;DB_CLOSE_DELAY=-1
