--- a/OrderService/src/main/resources/application.properties
+++ b/OrderService/src/main/resources/application.properties
@@ -1,8 +1,5 @@
-spring.application.name=orderms
-server.port=8301
-
-customerms.baseurl=http://localhost:8101/customers
-productms.baseurl=http://localhost:8201/products
+#spring.application.name=orderms
+#server.port=8301
 
 # Below properties are moved to central cloud config hence commented.
 #spring.datasource.url=jdbc:h2:./h2/spring-boot-h2-db;DB_CLOSE_DELAY=-1
