--- a/msConfig/orderms.properties
+++ b/msConfig/orderms.properties
@@ -1,3 +1,9 @@
+spring.application.name=orderms
+server.port=8301
+
+customerms.name=customerms
+productms.name=productms
+
 spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/orderdb
 spring.datasource.username=root
