Added Hystrix Circuit breaker implementation

--- a/msConfig/orderms.properties
+++ b/msConfig/orderms.properties
@@ -7,3 +7,15 @@ spring.datasource.username=root
 spring.datasource.password=root
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
 spring.jpa.hibernate.ddl-auto=update
+
+# Below indicates -> If there are 5 request sent in span of 10 seconds
+# and 50 % of those requests fail, then Hysterics should open the circuit
+# and directly call fallback logic(even without attempting to call the
+# api method marked with @HistrixCommand) for the next 20 seconds.
+# Additionally the api execution will be terminated and fallback called
+# if the execution time is beyond 60 seconds. 
+hystrix.command.default.circuitBreaker.requestVolumeThreshold=5
+hystrix.command.default.metrics.rollingStats.timeInMilliseconds=10000
+hystrix.command.default.circuitBreaker.errorThresholdPercentage=50
+hystrix.command.default.circuitBreaker.sleepWindowInMilliseconds=20000
+Hystrix.command.default.execution.isolation.thread.timeoutInMilliseconds=60000
